--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@electron-forge/plugin-webpack": "^6.1.1",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "@types/react-input-mask": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
@@ -49,7 +50,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.11.2",
+    "react-text-mask": "^5.5.0",
     "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
