--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.1.1",
     "@mui/material": "^5.13.3",
+    "@mui/x-data-grid": "^6.10.0",
     "@types/uuid": "^9.0.1",
     "electron-squirrel-startup": "^1.0.0",
     "firebase": "^9.22.1",
