--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   "author": "lucasneiva",
   "license": "MIT",
   "devDependencies": {
-    "@electron-forge/cli": "^6.1.1",
+    "@electron-forge/cli": "^6.2.1",
     "@electron-forge/maker-deb": "^6.1.1",
     "@electron-forge/maker-rpm": "^6.1.1",
     "@electron-forge/maker-squirrel": "^6.1.1",
     "@electron-forge/maker-zip": "^6.1.1",
     "@electron-forge/plugin-webpack": "^6.1.1",
+    "@electron-forge/publisher-github": "^6.2.1",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "@types/react-input-mask": "^3.0.2",
