--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 20
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
           if [ -e yarn.lock ]; then
           yarn install --frozen-lockfile
