Fix executable name

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": ".webpack/main",
+  "packagerConfig": {
+      "executableName": "inventory-management-app"
+  },
   "build":  {
     "asar": true
   },
