--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "css-loader": "^6.0.0",
     "electron": "24.4.0",
     "eslint": "^8.0.1",
+    "eslint-import-resolver-typescript": "^3.6.0",
     "eslint-plugin-import": "^2.25.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "node-loader": "^2.0.0",
@@ -47,6 +48,7 @@
     "@mui/material": "^5.13.3",
     "@mui/x-data-grid": "^6.10.0",
     "@types/uuid": "^9.0.1",
+    "babel-plugin-module-resolver": "^5.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "firebase": "^9.22.1",
     "install": "^0.13.0",
