--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "@hookform/resolvers": "^3.1.1",
     "@mui/material": "^5.13.3",
     "@mui/x-data-grid": "^6.10.0",
+    "@mui/x-date-pickers": "^6.12.0",
     "@types/uuid": "^9.0.1",
     "babel-plugin-module-resolver": "^5.0.0",
+    "date-fns": "^2.30.0",
     "electron-squirrel-startup": "^1.0.0",
     "firebase": "^9.22.1",
     "install": "^0.13.0",
