--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "inventory-management-app",
   "productName": "inventory-management-app",
-  "version": "v0.0.4",
+  "version": "0.0.5",
   "description": "My Electron application description",
   "main": ".webpack/main",
   "scripts": {
