--- a/package.json
+++ b/package.json
@@ -45,12 +45,15 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.1.1",
+    "@mui/icons-material": "^7.1.0",
     "@mui/material": "^5.13.3",
     "@mui/x-data-grid": "^6.10.0",
     "@mui/x-date-pickers": "^6.12.0",
     "@types/uuid": "^9.0.1",
+    "axios": "^1.7.9",
     "babel-plugin-module-resolver": "^5.0.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.5.0",
     "electron-squirrel-startup": "^1.0.0",
     "firebase": "^9.22.1",
     "install": "^0.13.0",
