--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,19 +23,21 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 20
-          cache: 'npm'
+          cache: 'yarn'
 
-      - name: Cache npm dependencies
+      - name: Cache yarn dependencies
         uses: actions/cache@v3
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          path: |
+            **/node_modules
+            **/.yarn-cache
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
-            ${{ runner.os }}-node-
+            ${{ runner.os }}-yarn-
 
       - name: Install Dependencies
         run: |
-          npm ci --prefer-offline --no-audit
+          yarn install --frozen-lockfile --network-timeout 100000
         timeout-minutes: 10
 
       - name: Publish app
