--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,10 +35,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      - name: Install Dependencies
+      - name: Clean up lock files
         run: |
-          yarn install --frozen-lockfile --network-timeout 100000
-        timeout-minutes: 10
+          rm -f package-lock.json
+          yarn install --network-timeout 100000
 
       - name: Publish app
         env:
