--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "typescript": "~4.8.0"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.31.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.1.1",
