--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
+    "prepublish": "rimraf out dist",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx ."
   },
