--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "inventory-management-app",
-  "productName": "inventory-management-app",
-  "version": "0.0.12",
-  "description": "My Electron application description",
+  "name": "stockify-app",
+  "productName": "Stockify App",
+  "version": "0.0.13",
+  "description": "Stockify Application for Inventory Management",
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
@@ -14,7 +14,7 @@
   },
   "keywords": [],
   "author": "lucasneiva",
-  "license": "MIT",
+  "license": "Proprietary",
   "devDependencies": {
     "@electron-forge/cli": "^6.2.1",
     "@electron-forge/maker-deb": "^6.1.1",
@@ -57,6 +57,7 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.5.0",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-updater": "^6.6.2",
     "firebase": "^9.22.1",
     "install": "^0.13.0",
     "react": "^18.2.0",
