--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "keywords": [],
   "author": "lucasneiva",
-  "license": "Proprietary",
+  "license": "SEE LICENSE IN LICENSE",
   "devDependencies": {
     "@electron-forge/cli": "^6.2.1",
     "@electron-forge/maker-deb": "^6.1.1",
