--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "make": "electron-forge make",
     "prepublish": "rimraf out dist",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "lint": "eslint --ext .ts,.tsx .",
+    "update-db": "ts-node scripts/updateDb.ts"
   },
   "keywords": [],
   "author": "lucasneiva",
