--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stockify-app",
   "productName": "Stockify App",
-  "version": "0.0.19",
+  "version": "0.0.20",
   "description": "Stockify Application for Inventory Management",
   "main": ".webpack/main",
   "scripts": {
@@ -68,6 +68,7 @@
     "react-router-dom": "^6.11.2",
     "react-text-mask": "^5.5.0",
     "react-toastify": "^9.1.3",
+    "update-electron-app": "^3.1.1",
     "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
